# Geo

./: DockerFile  README.md  pyproject.toml
config/: settings.py
geo/: admin.py  models.py
geo/migrations/: 0001_initial.py
