[tool.poetry]
name = "testgeodjango"
version = "0.1.0"
description = ""
authors = ["kutya001 <111129686+kutya001@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
django = "^4.1.7"
environ = "^1.0"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
